--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "http-errors": "^1.8.0",
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
