--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "md5": "^2.3.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
