--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "express-session": "^1.17.2",
     "http-errors": "^1.8.0",
     "md5": "^2.3.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.6.2",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "uuidv1": "^1.6.14",
-    "multer": "^1.4.2"
+    "uuidv1": "^1.6.14"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
