--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sendgrid/mail": "^7.4.5",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "dateformat": "^4.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
@@ -24,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "sha256": "^0.2.0",
     "uuidv1": "^1.6.14"
   },
   "devDependencies": {
